styles.css
* {
  box-sizing: border-box;
}
body {
  font-family: "Roboto", sans-serif;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 100px;
}
.calcu-body {
  width: 400px;
  height: 600px;
  border: solid 1px black;
  border-radius: 10px;

  display: flex;
  flex-direction: column;
  align-content: space-evenly;
  justify-content: space-evenly;
  align-items: center;
  background-color: black;
}

.calcu-display {
  width: 350px;
  height: 200px;
  border: solid 1px black;
  border-radius: 10px;
  color: white;
  /*margin: 25px;*/
}

.num-container {
  display: flex;
  margin: 0 18px 0px 18px;
  width: 350px;
  height: 305px;
  /*border: solid 1px black;*/
  flex-direction: column;
}

.otherButtons {
  display: flex;
  justify-content: space-between;
  align-content: space-between;
  gap: 4px;
  margin-bottom: 4px;
}
.numOperation {
  display: flex;
  justify-content: space-between;
}

.numbers {
  display: flex;
  flex-wrap: wrap;

  justify-content: space-between;
  align-content: space-between;
  gap: 4px;
  margin-bottom: 4px;
}

.numbers button {
  background-color: #505050;
  border: none;
  border-radius: 3px;
  color: white;
}

.operations {
  display: flex;
  flex-direction: column;

  align-items: center;
}
button.operand {
  background-color: #ff9500;
  margin-bottom: 4px;
  width: 83px;
  margin-left: 4px;
  border: none;
  border-radius: 3px;
  color: white;
}
button {
  width: 85px;
  height: 58px;
  font-size: 22px;
}

.numZero,
.operate {
  flex-grow: 1;
}

.operate {
  background-color: #ff9500;
  border: none;
  border-radius: 3px;
  color: white;
}
.clear,
.backspace {
  background-color: #d4d4d2;
  border: none;
  border-radius: 3px;
}

.hidden {
  display: none !important;
}

.modal {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 400px;
  height: 300px;
  display: flex;
  flex-direction: column;
  justify-content: space-around;

  padding: 40px;
  text-align: center;
  border-radius: 10px;
  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
  background-color: white;
  z-index: 10;
}

.overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
  backdrop-filter: blur(1px);
  z-index: 5;
}

.modal-buttons {
  display: flex;
  justify-content: center;
  padding: 0;
  gap: 20px;
}

.yes,
.cancel {
  width: 100px;
  height: 50px;
  border-radius: 5px;
  border: none;
  color: white;
  font-family: "Roboto", sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  cursor: pointer;
}
.yes {
  background-color: rgb(5, 226, 5);
}
.cancel {
  background-color: red;
}
.error-msg {
  font-size: 25px;
}

h2,
p {
  margin: 10px 0;
}

.modal p {
  font-size: 20px;
}

